# lmu_meteo_api

./: .gitignore  README.md  main.py  pyproject.toml
lmu_meteo_api/: interface.py
notebooks/: usage_example.ipynb
src/: interface.py
