[tool.poetry]
name = "lmu-weather-api"
version = "0.1.0"
description = "Python interface to request data from the LMU Meteorology station."
authors = ["DanielKuebi <daniflug95@live.at>"]
readme = "README.md"
packages = [{include = "lmu_weather_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
requests = "^2.31.0"
numpy = "^1.25.2"
json2json = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
