[project]
name = "lmu-weather-api"
version = "0.3.0"
description = "Python interface to retrieve data from LMU meteo API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
]
