[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmu-weather-api"
version = "1.0.0"
description = "Python interface to retrieve data from LMU Meteo API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]

[tool.hatch.build.targets.wheel]
packages = ["lmu_meteo_api"]
